--- a/multi.language.input.css
+++ b/multi.language.input.css
@@ -16,5 +16,5 @@ multi-language-input[data-type='input'] > textarea {
 multi-language-input > select {
     background-color: rgba(255, 255, 255, 0.1);
     direction: rtl;
-    width: 20%;
+    width: 200px;
 }
